welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: Missing closing brace `}' assumed here
var A:Int=0
^